mejoramos el top nav

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
   <div class="a-bar a-left" style="width: 100%;overflow:hidden;height:44px">
     
-        <a class="topnavitem" href="#home" tittle="casa">Home</a>
-        <a class="topnavitem"href="#news" tittle="iniciar seccion">Iniciar Sección</a></li>
-        <a class="topnavitem"href="#contact" tittle="contacto">Contact</a></li>
-        <a class="active" href="#about" tittle="contacto">About</a>
+        <a class="topnav" href="#home" tittle="casa">Home</a>
+        <a class="topnav"href="#news" tittle="iniciar seccion">Iniciar Sección</a></li>
+        <a class="topnav"href="#contact" tittle="contacto">Contactos</a></li>
+        <a class="active" href="#about" tittle="Sobre Nosotros">Sobre Nosotros</a>
       
   </div>  
   <div class="main" id="abajodetopnav" style="margin-left: 220px; padding-top: opx;"> 
