--- a/PaginasWeb/Nuevo.html
+++ b/PaginasWeb/Nuevo.html
@@ -10,8 +10,8 @@
 </head>
 <body>
   <div class="topnav">
-    <a class="active" href="#home">Inicio</a>
-    <a href="#news">Nuevo</a>
+    <a href="#home">Inicio</a>
+    <a class="active" href="#news">Nuevo</a>
     <a href="#contact">Contactos</a>
     <a href="#about">Sobre Nosotros</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
