se avanzaron con las paginas

--- a/PaginasWeb/Nuevo.html
+++ b/PaginasWeb/Nuevo.html
@@ -10,15 +10,15 @@
 </head>
 <body>
   <div class="topnav">
-    <a href="#home">Inicio</a>
-    <a class="active" href="#news">Nuevo</a>
-    <a href="#contact">Contactos</a>
-    <a href="#about">Sobre Nosotros</a>
+    <a href="#inicio">Inicio</a>
+    <a class="active" href="Nuevo.html">Nuevo</a>
+    <a href="#contacto">Contactos</a>
+    <a href="#sobrenosotros">Sobre Nosotros</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars"></i>
   </div> 
     <div>
-
+      SOY NUEVO
     </div>
 </body>
 </html>
