--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
   <div class="topnav">
-    <a class="active" href="#home">Inicio</a>
-    <a href="#news">Nuevo</a>
-    <a href="#contact">Contactos</a>
-    <a href="#about">Sobre Nosotros</a>
+    <a class="active" href="#inicio">Inicio</a>
+    <a href="Nuevo.html">Nuevo</a>
+    <a href="Contactos.html">Contactos</a>
+    <a href="#sobrenosotros">Sobre Nosotros</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars"></i>
   </div> 
